<resources>
    <string name="app_name">lasToDo</string>
    <string name="add_new_todo">Add new todo</string>
    <string name="filter">filter</string>
    <string name="add_image_optional">Add Image(Optional)</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="deadline_optional">Deadline(Optional)</string>
    <string name="delete_todo">Delete Todo</string>
    <string name="cancel">Cancel</string>
    <string name="todo_list">TODO LIST</string>
    <string name="todo">TODO</string>
    <string name="all">All</string>
    <string name="by_time">By Time</string>
    <string name="deadline">DeadLine</string>
    <string name="notify_me_15_mins_before_end">Notify me 15 mins before end</string>
    <string name="add_todo">Add Todo</string>
    <string name="nothing">nothing</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_">Don\'t have an account? Sign up</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="learn_room">Learn Room</string>
    <string name="email">Email</string>
    <string name="change_password">changePassword</string>
    <string name="sign_out">sign out</string>
    <string name="login">Login</string>
    <string name="edit">edit</string>
</resources>