<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_button_background"
    android:padding="@dimen/dp_8"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_2"
    android:paddingEnd="@dimen/dp_100">

    <TextView
        android:id="@+id/filterAllBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:clickable="true"
        android:fontFamily="@font/montserrat_alternates"
        android:minHeight="@dimen/dp_48"
        android:text="@string/all"
        android:textAlignment="viewStart"
        android:textColor="@color/design_default_color_on_secondary" />

    <TextView
        android:id="@+id/filterByTimeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/montserrat_alternates"
        android:minHeight="@dimen/dp_48"
        android:text="@string/by_time"
        android:textAlignment="viewStart"
        android:textColor="@color/design_default_color_on_secondary"/>

    <TextView
        android:id="@+id/filterByDeadlineBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp_48"
        android:clickable="true"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/deadline"
        android:textAlignment="viewStart"
        android:textColor="@color/design_default_color_on_secondary" />
</androidx.appcompat.widget.LinearLayoutCompat>