<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:contentDescription="@string/todo"
                android:layout_gravity="center"
                android:src="@drawable/ic_main_logo" />

            <Space
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                android:minWidth="@dimen/dp_48"
                android:minHeight="@dimen/dp_48"
                android:layout_gravity="center"
                android:src="@drawable/ic_settings" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_24"
        android:src="@drawable/ic_todo_logo_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_34"
        android:layout_marginStart="@dimen/dp_4"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/todo_list"
        android:textColor="@color/orange_primary"
        android:textSize="@dimen/sp_36"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/filterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@android:color/transparent"
        android:contentDescription="@string/filter"
        android:minWidth="@dimen/dp_48"
        android:minHeight="@dimen/dp_48"
        android:src="@drawable/ic_filter_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:listitem="@layout/todo_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewTodoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_new_todo"
        android:foregroundTint="@color/white"
        android:src="@drawable/ic_add_todo"
        app:backgroundTint="@color/orange_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/dp_60"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>