<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addEditDialog"
    android:background="@drawable/ic_rectangle_rounded_dialogbc"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_dialog_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/ic_rectangle_rounded_text_cont"
        android:fontFamily="@font/mandali"
        android:hint="@string/title"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/descriptionEt"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/ic_rectangle_rounded_text_cont"
        android:fontFamily="@font/mandali"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deadlineBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:alpha="0.5"
        android:background="@drawable/ic_rectangle_rounded_text_cont"
        android:fontFamily="@font/mandali"
        android:paddingHorizontal="8dp"
        android:text="@string/deadline_optional"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/deadlineBtn"
        app:layout_constraintEnd_toEndOf="@+id/deadlineBtn"
        app:layout_constraintTop_toTopOf="@+id/deadlineBtn" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:src="@drawable/ic_image"
        app:layout_constraintBottom_toBottomOf="@+id/addImageBtn"
        app:layout_constraintEnd_toEndOf="@+id/addImageBtn"
        app:layout_constraintTop_toTopOf="@+id/addImageBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addImageBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:alpha="0.5"
        android:background="@drawable/ic_rectangle_rounded_text_cont"
        android:fontFamily="@font/mandali"
        android:paddingHorizontal="8dp"
        android:text="@string/add_image_optional"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addEditBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/ic_button_background"
        android:fontFamily="@font/mandali"
        android:text="Add Todo"
        android:textColor="#DD2C00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImageBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>